@@ -4,6 +4,7 @@ Version 1.18.6 *
 - added function to "Save as..." for the project options file
 - fixed crash after "Save as..." of the changelog
 - fixed color theme issue when Windows is in dark mode and Studio is using light mode
+- fixed incorrect entry count for model library tabs
 - update editors after changes in settings dialog
 
 Version 1.18.5
